# metalor

./: .gitignore  Cargo.toml  README.crates-io.md  README.md
.github/workflows/: ci.yml
src/: lib.rs  parser.rs  runtime.rs
src/runtime/: caps.rs  linux.rs  linux_provider.rs  macos.rs  portable.rs  protocol.rs  windows.rs  worker_support.rs
src/runtime/macos/: assets.rs  client.rs  linux_provider.rs  validation.rs  worker.rs
src/runtime/macos/templates/: MetalorWorker-Info.plist
src/runtime/windows/: broker.rs  linux_provider.rs  validation.rs  worker.rs
tests/: build_cell.rs  macos_support.rs  parser.rs  provider.rs  readme_examples.rs  runtime.rs  windows_support.rs
