[package]
name = "metalor"
version = "0.1.0"
edition = "2021"
description = "Generic parsing utilities and isolated runtime helpers for build-file execution"
authors = ["Victor Stewart"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/metalor"
homepage = "https://docs.rs/metalor"
keywords = ["container", "runtime", "parser", "oci"]
categories = ["development-tools", "parser-implementations"]

[lib]
name = "metalor"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
serde_json = "1.0.145"
sha2 = "0.10"
