[package]
name = "metalor"
version = "0.2.0"
edition = "2021"
description = "Rust utilities for line-oriented DSL parsing, portable build cells, and native multi-OS runtime integration"
authors = ["Victor Stewart"]
license = "Apache-2.0"
readme = "README.crates-io.md"
documentation = "https://docs.rs/metalor"
homepage = "https://docs.rs/metalor"
repository = "https://github.com/victorstewart/metalor"
keywords = ["container", "runtime", "parser", "oci"]
categories = ["development-tools", "parser-implementations"]

[lib]
name = "metalor"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
flate2 = "1.1"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10"
tar = "0.4"
